tests/NormalTests/paczka1/small_fuzzy/70092751.err
Error in line 4: cRFOske A668 70,6
Error in line 13: A791 A668 70,8
